Support for SLF4J 2.0.x